<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quee System</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="fullname">Full name</string>
    <string name="createaccountHeader">Create Account</string>
    <string name="createaccountsubheader">Account Type</string>
    <string name="privateuser">Private</string>
    <string name="org">Company</string>
    <string name="discription">Company Discription (optional)</string>
    <string name="forgotpass">Forgot Password ?</string>
    <string name="rememberme">Remember me</string>
    <string name="backtologin">close</string>
    <string name="logoimage">logo image</string>
    <string name="social">loginoptions</string>


    <string name="slogan">wherever you are , its possible !!</string>
    <string name="by">Antic Design</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="create1">Do not have account ?</string>
    <string name="create2"> Create Account Here.</string>
    <string name="ourlogo">Quee System</string>

    <string name="code">CO <br></br>DE</string>
    <string name="verify"> Verification</string>
    <string name="check"> verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>