<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".phoneVerification">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/ranchers"
            android:gravity="center"
            android:textFontWeight="4000"
            android:text="@string/code"
            android:textSize="160sp" />

        <TextView
            android:id="@+id/verifytxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/code"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verifytxt"
            android:layout_centerHorizontal="true"
            android:textSize="14sp" />

        <com.chaos.view.PinView
            android:id="@+id/pinViewFiled"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:inputType="number"
            app:cursorColor="#000"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemWidth="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verifybtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pinViewFiled"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:text="@string/check"
            android:onClick="otplogin"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonTextSize"
            app:cornerRadius="8dp" />
    </RelativeLayout>
</ScrollView>