<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activities_background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".loginSignup">

    <RelativeLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inconsolata"
            android:text="@string/login"
            android:textSize="@dimen/headerTextSize" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginHeader"
            android:fontFamily="serif"
            android:hint="@string/email"
            android:importantForAutofill="no"
            app:boxCornerRadiusBottomEnd="@dimen/inputboxradius"
            app:boxCornerRadiusBottomStart="@dimen/inputboxradius"
            app:boxCornerRadiusTopEnd="@dimen/inputboxradius"
            app:boxCornerRadiusTopStart="@dimen/inputboxradius"
            app:endIconMode="clear_text"
            app:hintTextColor="#A1A0A0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="5dp"
                android:textColorHint="@color/light_black"
                android:textSize="@dimen/inputFieldTextSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:importantForAutofill="no"
            app:boxCornerRadiusBottomEnd="@dimen/inputboxradius"
            app:boxCornerRadiusBottomStart="@dimen/inputboxradius"
            app:boxCornerRadiusTopEnd="@dimen/inputboxradius"
            app:boxCornerRadiusTopStart="@dimen/inputboxradius"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:counterTextColor="@color/light_black"
            app:endIconMode="clear_text"
            app:hintTextColor="#A1A0A0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/pass"
                android:drawablePadding="5dp"
                android:inputType="text"
                android:textSize="@dimen/inputFieldTextSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_margin="5dp"
            android:fontFamily="@font/antic"
            android:onClick="login"
            android:padding="15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonTextSize"
            app:cornerRadius="8dp" />


        <RelativeLayout
            android:id="@+id/remembersec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:onClick="forgotPassword"
                android:text="@string/forgotpass"
                android:textAllCaps="false"
                android:textSize="@dimen/inputFieldTextSize" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/remecheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
               android:layout_toEndOf="@+id/forgotpassword"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:fontFamily="@font/ranchers"
                android:includeFontPadding="false"
                android:textAllCaps="false"
                android:textColorLink="@color/light_black2"
                android:textSize="@dimen/inputFieldTextSize" />

            <TextView
                android:id="@+id/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="-30dp"
                android:layout_toEndOf="@+id/remecheckbox"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:text="@string/rememberme"
                android:textAllCaps="false"
                android:textSize="@dimen/inputFieldTextSize" />


        </RelativeLayout>


        <ImageView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remembersec"
            android:layout_marginStart="150dp"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/social"
            android:src="@drawable/fb" />

        <ImageView
            android:id="@+id/gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remembersec"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:layout_toEndOf="@+id/facebook"
            android:contentDescription="@string/social"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/linkdin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remembersec"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:layout_toEndOf="@+id/gmail"
            android:contentDescription="@string/social"
            android:src="@drawable/linkedin" />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebook"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:text="@string/create1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/account2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebook"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/account"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:onClick="newUserregister"
            android:text="@string/create2"
            android:textColor="#fece2f"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="50dp">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:background="@drawable/progressbar_bg"
                android:elevation="10dp"
                android:visibility="invisible" />

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>